# icli-python

./: .editorconfig  .gitignore  .motto  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
icli/: __main__.py
icli/cli/: __init__.py  entrypoint.py  utils.py
icli/cli/ip/: cli.py  shell.py
icli/cli/url/: cli.py  parse.py
requirements/: all.txt  linting.in  linting.txt  pyproject.txt  testing.in  testing.txt  tools.in  tools.txt
