[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icli"
description = "`icli` is a personal command-line tool, which includes various commonly used utilities."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name = "lazyboy", email = "lazyboy.fan@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click>=8.1.3",
    "netifaces>=0.11.0",
    "pyperclip>=1.8.2",
    "tabulate[widechars]>=0.9.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/druagoon/icli-python#readme"
Issues = "https://github.com/druagoon/icli-python/issues"
Source = "https://github.com/druagoon/icli-python"

[project.scripts]
icli = "icli.cli.entrypoint:main"

[tool.hatch.version]
path = "icli/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=icli --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "icli/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
color = true
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
force_grid_wrap = 2
case_sensitive = true
order_by_type = false
combine_as_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
